add open interfaces, allow ordinal