@@ -34,7 +34,7 @@ protobuf {
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-                java { }
+                java {}
             }
         }
     }
@@ -58,6 +58,10 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+        }
+
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
         }
     }
     lint {
@@ -90,10 +94,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-encoders:17.0.0'
     implementation 'com.google.firebase:firebase-installations-interop:17.1.0'
     implementation 'javax.inject:javax.inject:1'
-    implementation('com.google.firebase:firebase-datatransport:18.2.0'){
-         exclude group: 'com.google.firebase', module: 'firebase-common'
-         exclude group: 'com.google.firebase', module: 'firebase-components'
-     }
+    implementation('com.google.firebase:firebase-datatransport:18.2.0') {
+        exclude group: 'com.google.firebase', module: 'firebase-common'
+        exclude group: 'com.google.firebase', module: 'firebase-components'
+    }
     implementation("com.google.firebase:firebase-common:20.4.2")
     implementation("com.google.firebase:firebase-common-ktx:20.4.2")
     implementation("com.google.firebase:firebase-components:17.1.3")
@@ -116,9 +120,9 @@ dependencies {
         exclude group: 'com.google.firebase', module: 'firebase-common'
         exclude group: 'com.google.firebase', module: 'firebase-components'
     }
-    vendor (libs.dagger.dagger) {
-         exclude group: "javax.inject", module: "javax.inject"
-     }
+    vendor(libs.dagger.dagger) {
+        exclude group: "javax.inject", module: "javax.inject"
+    }
 }
 
 // ==========================================================================
